[Assignment] Cellule1.4 - Web

--- a/cell01/ex04/basics.html
+++ b/cell01/ex04/basics.html
@@ -61,8 +61,8 @@
     <hr>
 
     <div class="footer">
-        <span id="copyright"> © ylimwila
-            <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+        <span id="copyright">
+            <script>document.getElementById('copyright').appendChild(document.createTextNode("© ylimwila " + new Date().getFullYear()))</script>
         </span>
     </div>
 
