--- a/cell01/ex04/basics.html
+++ b/cell01/ex04/basics.html
@@ -62,7 +62,7 @@
 
     <div class="footer">
         <span id="copyright">
-            <script>document.getElementById('copyright').appendChild(document.createTextNode("© ylimwila " + new Date().getFullYear()))</script>
+            © ylimwila 2025
         </span>
     </div>
 
