[Assignment] Cellule2.2 - Web

--- a/cell02/ex02/parallax.html
+++ b/cell02/ex02/parallax.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parallax</title>
     <link rel="stylesheet" href="parallax.css">
 </head>
+
 <body>
-    
+    <div class="parallax" id="img1">
+        <div class="caption">
+            <span>Sayu</span>
+        </div>
+    </div>
+    <div class="black-block">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis cum, repudiandae quam sit eaque explicabo
+            labore autem saepe nulla omnis asperiores tempore cupiditate eius! Aperiam labore libero doloremque ex
+            inventore.</p>
+    </div>
+    <div class="parallax" id="img2">
+        <div class="caption">
+            <span>Bocchi</span>
+        </div>
+    </div>
 </body>
+
 </html>
