--- a/cell02/ex03/card.html
+++ b/cell02/ex03/card.html
@@ -26,7 +26,7 @@
                         <a href="#" class="social-link"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
-                <a class="footer">Contact</a>
+                <a class="footer" href="https://github.com/yongsin-oak" target="_blank">Contact</a>
             </div>
         </div>
         
