--- a/cell03/ex04/ex00bis/background.html
+++ b/cell03/ex04/ex00bis/background.html
@@ -10,13 +10,11 @@
 </head>
 
 <body>
-    <p>If you click on me, I will disappear.</p>
-    <p>Click me away!</p>
-    <p>Click me too!</p>
+    <button>Click !!!!!!</button>
     <script>
         $(document).ready(function () {
-            $("p").click(function () {
-                $(this).hide();
+            $("button").click(function () {
+                $(document.body).css("background-color", `rgb(${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)})`);
             });
         });
     </script>
