[Assignment] Cellule3.4 - Web

--- a/cell03/ex04/ex01bis/balloon.html
+++ b/cell03/ex04/ex01bis/balloon.html
@@ -37,7 +37,7 @@
         <div class="ballon" />
     </div>
     <script>
-        $(document).ready(function () {
+        $(document).ready(() => {
             let curColor = 0;
             const colors = ["red", "green", "blue"];
             const $ballon = $('.ballon');
