--- a/cell03/ex04/ex00bis/background.html
+++ b/cell03/ex04/ex00bis/background.html
@@ -12,8 +12,8 @@
 <body>
     <button>Click !!!!!!</button>
     <script>
-        $(document).ready(function () {
-            $("button").click(function () {
+        $(document).ready(() => {
+            $("button").click(() => {
                 $(document.body).css("background-color", `rgb(${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)})`);
             });
         });
