[Edit Assignment] Cellule2.3 - Web

--- a/cell02/ex03/card.html
+++ b/cell02/ex03/card.html
@@ -14,7 +14,8 @@
         <div class="container">
             <h2 class="title">User Profile Card</h2>
             <div class="card">
-                <img src="https://placehold.co/250x250" alt="Avatar">
+                <img src="https://i.pinimg.com/736x/de/ce/a6/decea68c9aa88bd4af4fb358fe7db821.jpg" alt="Avatar"
+                    width="250" height="250">
                 <div class="desc">
                     <h2>ylimwila</h2>
                     <p class="level">Level 8, The answer</p>
@@ -29,7 +30,6 @@
                 <a class="footer" href="https://github.com/yongsin-oak" target="_blank">Contact</a>
             </div>
         </div>
-        
     </div>
 </body>
 
