--- a/cell03/ex04/ex01bis/balloon.html
+++ b/cell03/ex04/ex01bis/balloon.html
@@ -40,19 +40,19 @@
         $(document).ready(() => {
             let curColor = 0;
             const colors = ["red", "green", "blue"];
-            const $balloon = $('.balloon');
+            const balloon = $('.balloon');
 
             const sizeIncrease = () => {
-                const balloonSize = $balloon.width();
-                $balloon.css({
+                const balloonSize = balloon.width();
+                balloon.css({
                     width: balloonSize + 10 + 'px',
                     height: balloonSize + 10 + 'px'
                 });
                 curColor = (curColor + 1) % colors.length;
-                $balloon.css('background-color', colors[curColor]);
+                balloon.css('background-color', colors[curColor]);
 
-                if ($balloon.width() > 420) {
-                    $balloon.css({
+                if (balloon.width() > 420) {
+                    balloon.css({
                         width: '200px',
                         height: '200px'
                     });
@@ -60,19 +60,19 @@
             }
 
             const sizeDecrease = () => {
-                if ($balloon.width() > 200) {
-                    const ballonSize = $balloon.width();
-                    $balloon.css({
+                if (balloon.width() > 200) {
+                    const ballonSize = balloon.width();
+                    balloon.css({
                         width: ballonSize - 5 + 'px',
                         height: ballonSize - 5 + 'px'
                     });
                 }
                 curColor = (curColor - 1 + colors.length) % colors.length;
-                $balloon.css('background-color', colors[curColor]);
+                balloon.css('background-color', colors[curColor]);
             }
 
-            $balloon.on('click', sizeIncrease);
-            $balloon.on('mouseleave', sizeDecrease);
+            balloon.on('click', sizeIncrease);
+            balloon.on('mouseleave', sizeDecrease);
         });
     </script>
 </body>
