[Set Project] Rush

--- a/rush/index.html
+++ b/rush/index.html
@@ -19,12 +19,12 @@
             <li><a href="#section1">Section 1</a></li>
             <li><a href="#section2">Section 2</a></li>
             <li><a href="#section3">Section 3</a></li>
-            
-            
+
+
         </ul>
     </nav>
-    <main class="main"><my-text>test</my-text></main>
+    <main class="main"><my-text h1>test</my-text></main>
 </body>
-<script type="module" src="/js/main.js"></script>
+<script type="module" src="./js/main.js"></script>
 
 </html>
