[Edit Assignment] [Edit Rush]

--- a/cell01/ex06/responsive.html
+++ b/cell01/ex06/responsive.html
@@ -7,9 +7,14 @@
     <title>Tab</title>
 </head>
 <style>
+    body {
+        margin: 0;
+        height: 100vh;
+    }
     table {
         border-collapse: collapse;
         width: 100%;
+        height: 100%;
     }
 
     td {
