--- a/rush/index.html
+++ b/rush/index.html
@@ -23,8 +23,8 @@
             
         </ul>
     </nav>
-    <main class="main"><my-text>test</my-text></main>
+    <main class="main"><my-text h1>test</my-text></main>
 </body>
-<script type="module" src="/js/main.js"></script>
+<script type="module" src="./js/main.js"></script>
 
 </html>
