--- a/rush/main.html
+++ b/rush/main.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://placehold.co/250" alt="Image 2">
+                <img src="./assets/images/tsoontho/tsoontho_main.jpg" alt="Image 2">
                 <div class="desc">
                     <my-text medium>.... .....</my-text>
                 </div>
