--- a/rush/main.html
+++ b/rush/main.html
@@ -24,7 +24,7 @@
             <div class="card">
                 <img src="./assets/images/tsoontho/tsoontho_main.jpg" alt="Image 2">
                 <div class="desc">
-                    <my-text medium>.... .....</my-text>
+                    <my-text medium>Tanawat Soonthorn</my-text>
                 </div>
             </div>
         </div>
