--- a/rush/main.html
+++ b/rush/main.html
@@ -13,15 +13,15 @@
 
 <body>
     <main>
-        <my-text h1 bold>Can you choose?</my-text>
+        <my-text class="title" bold size="3rem">Can you choose?</my-text>
         <div class="container">
-            <div class="card">
+            <div class="card" id="oak" onclick="window.location.href='./ylimwila/index.html'">
                 <img src="./assets/images/ylimwila/yongsin_main.jpg" alt="Image 1">
                 <div class="desc">
-                    <my-text medium>Yongsin Limwilaikul</my-text>
+                    <my-text medium>Yongsin Limwilaikul (Oak)</my-text>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" id="jeno" onclick="window.location.href='./tsoontho/index.html'">
                 <img src="https://placehold.co/250" alt="Image 2">
                 <div class="desc">
                     <my-text medium>.... .....</my-text>
