--- a/rush/ylimwila/index.html
+++ b/rush/ylimwila/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rush Project</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -24,7 +24,8 @@
         </ul>
     </nav>
     <main class="main"><my-text h1>test</my-text></main>
+    <script src="./script.js"></script>
+    <script type="module" src="../js/components.js"></script>
 </body>
-<script type="module" src="./js/main.js"></script>
 
 </html>
