--- a/cell03/ex02/calc.html
+++ b/cell03/ex02/calc.html
@@ -34,6 +34,7 @@
 
             if ((operator === '/' || operator === '%') && rightNum === 0) {
                 alert("It's over 9000!");
+                console.log("It's over 9000!");
                 return;
             }
 
