--- a/cell03/ex04/ex02bis/calc.html
+++ b/cell03/ex04/ex02bis/calc.html
@@ -33,9 +33,9 @@
                     alert('Error :(');
                     return;
                 }
-
                 if ((operator === '/' || operator === '%') && rightNum === 0) {
                     alert("It's over 9000!");
+                    console.log("It's over 9000!");
                     return;
                 }
 
