--- a/rush/ylimwila/index.html
+++ b/rush/ylimwila/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rush Project</title>
+    <title>Yongsin</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -14,13 +15,11 @@
 </head>
 
 <body>
-    <nav class="sidenav">
+    <nav class="sideNav">
         <ul>
             <li><a href="#section1">Section 1</a></li>
             <li><a href="#section2">Section 2</a></li>
             <li><a href="#section3">Section 3</a></li>
-
-
         </ul>
     </nav>
     <main class="main"><my-text h1>test</my-text></main>
