--- a/rush/main.html
+++ b/rush/main.html
@@ -35,7 +35,7 @@
         </div>
     </main>
 
-    <script src="./js/main.js"></script>
+    <script src="./main.js"></script>
     <script type="module" src="./js/components.js"></script>
 </body>
 
