--- a/rush/ylimwila/index.html
+++ b/rush/ylimwila/index.html
@@ -5,25 +5,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yongsin</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- minify -->
+    <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
+    <!-- latest -->
+    <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
+    <!-- core style only -->
+    <link href="https://unpkg.com/nes.css/css/nes-core.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../global.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet">
 </head>
 
 <body>
-    <nav class="sideNav">
-        <ul>
-            <li><a href="#section1">Section 1</a></li>
-            <li><a href="#section2">Section 2</a></li>
-            <li><a href="#section3">Section 3</a></li>
-        </ul>
-    </nav>
-    <main class="main"><my-text h1>test</my-text></main>
-    <script src="./script.js"></script>
+    <my-nav></my-nav>
+    <my-section myid="about">
+        <div class="img-container">
+            <div class="nes-container with-title is-centered img-border">
+                <p class="title" style="background-color: coral;">Oak</p>
+                <div class="img">
+                    <img src="../assets/images/ylimwila/about.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        <div-column gap="4px">
+            <h2 class="title">Hello, I'm Yongsin Limwilaikul (Oak)</h2>
+            <my-text>Aspiring Full-stack Developer</my-text>
+            <my-text s3 color="white">I am currently a Front-end Developer with 6 months of internship experience using
+                React.js,
+                React Native, and TypeScript at a startup company. During my internship, I had the opportunity to work
+                on real projects and received positive feedback from my colleagues. And I am currently developing my
+                skills to become a Full-stack Developer.</my-text>
+        </div-column>
+    </my-section>
+
+    <my-section myid="skills">
+        <div-column gap="4px">
+
+            <a href="https://nodejs.org/en/docs" target="_blank"><img
+                    src="https://img.shields.io/badge/Node.js-339933?style=for-the-badge&logo=node.js&logoColor=white"
+                    alt="Node.js"></a>
+            <a href="https://expressjs.com/" target="_blank"><img
+                    src="https://img.shields.io/badge/Express.js-000000?style=for-the-badge&logo=express&logoColor=white"
+                    alt="Express.js"></a>
+            <a href="https://elysiajs.com/" target="_blank"><img
+                    src="https://img.shields.io/badge/ElysiaJS-8E44AD?style=for-the-badge" alt="ElysiaJS"></a>
+            <a href="https://socket.io/docs/" target="_blank"><img
+                    src="https://img.shields.io/badge/Socket.io-010101?style=for-the-badge&logo=socket.io&logoColor=white"
+                    alt="Socket.io"></a>
+            <a href="https://orm.drizzle.team/" target="_blank"><img
+                    src="https://img.shields.io/badge/Drizzle_ORM-2D3748?style=for-the-badge&logo=drizzle&logoColor=white"
+                    alt="Drizzle ORM"></a>
+            <a href="https://www.prisma.io/docs" target="_blank"><img
+                    src="https://img.shields.io/badge/Prisma-2D3748?style=for-the-badge&logo=prisma&logoColor=white"
+                    alt="Prisma"></a>
+            <a href="https://www.postgresql.org/docs/" target="_blank"><img
+                    src="https://img.shields.io/badge/PostgreSQL-336791?style=for-the-badge&logo=postgresql&logoColor=white"
+                    alt="PostgreSQL"></a>
+            <a href="https://firebase.google.com/docs" target="_blank"><img
+                    src="https://img.shields.io/badge/Firebase-FFCA28?style=for-the-badge&logo=firebase&logoColor=black"
+                    alt="Firebase"></a>
+        </div-column>
+    </my-section>
+
+    <footer id="contact" class="nes-container is-dark">
+        <h2>Contact</h2>
+        <p>You can reach me at example@email.com</p>
+    </footer>
+
+    <script src="script.js"></script>
     <script type="module" src="../js/components.js"></script>
 </body>
 
